Kargo applied multiple changes
Including:

  * updated Application/gotham-demo/values-batman.yaml to use image quay.io/gotham/batman:de9964e
  * updated Application/gotham-demo/values-joker.yaml to use image quay.io/gotham/joker:d9d3ff0
  * updated Application/gotham-demo/values-robin.yaml to use image quay.io/gotham/robin:0ccd0fc

--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -3,7 +3,7 @@ image:
   ## Defaults to the release name
   name: quay.io/gotham/batman
   ## Tag that you want to build/deploy
-  tag: e83eb52
+  tag: de9964e
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
@@ -90,6 +90,8 @@ deploy:
       </head>
       <body>
           <h1>I'm Batman App</h1>
+          <br>
+          <img src="image/kargo-logo.png" alt="kargo">
           <br>
           <img src="image/1329876.png" alt="Batman">
       </body>
