--- a/Application/gotham-demo/values-joker.yaml
+++ b/Application/gotham-demo/values-joker.yaml
@@ -3,7 +3,7 @@ image:
   ## Defaults to the release name
   name: quay.io/gotham/joker
   ## Tag that you want to build/deploy
-  tag: 'adf8508'
+  tag: adf8508
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
