--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -91,7 +91,7 @@ deploy:
       <body>
           <h1>I'm Batman App</h1>
           <br>
-          <img src="image/kargo-logo.png" alt="kargo">
+          <img src="image/kargo-logo.png" alt="kargo1">
           <br>
           <img src="image/1329876.png" alt="Batman">
       </body>
