--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -3,7 +3,7 @@ image:
   ## Defaults to the release name
   name: quay.io/gotham/batman
   ## Tag that you want to build/deploy
-  tag: c0816cc
+  tag: f23b47b873
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
@@ -91,7 +91,7 @@ deploy:
       <body>
           <h1>I'm Batman App</h1>
           <br>
-          <img src="image/kargo-logo.png" alt="kargo">
+          <img src="image/kargo-logo.png" alt="kargo1">
           <br>
           <img src="image/1329876.png" alt="Batman">
       </body>
