--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -21,9 +21,13 @@ deploy:
   serviceType: ClusterIP
   ## Freeform service ports. More information: https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
   ports:
-    - name: http
+    - name: http1
       port: 8080
       targetPort: 8080
+      protocol: TCP
+    - name: http2
+      port: 8081
+      targetPort: 8081
       protocol: TCP
   ## For creating a Route, allowing your application to be accessed from outside the OCP cluster
   route:
@@ -115,9 +119,15 @@ deploy:
 
   ## Freeform containers: More information: https://kubernetes.io/docs/concepts/workloads/pods/#pod-templates
   extraContainers:
-  #  - name: my-extra-container
-  #    command: ["sleep", "infinity"]
-  #    image: registry.redhat.io/ubi8/ubi-minimal
+   - name: my-extra-container
+     image: quay.io/gotham/batman:797cd83
+     env:
+      - name: IMAGE
+        value: quay.io/gotham/batman
+      - name: TAG
+        value: "4a7050d"
+      - name: PORT
+        value: "8081"
 global:
   ## Override the release name
   nameOverride: gotham
