--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -55,7 +55,7 @@ deploy:
   livenessProbe:
     httpGet:
       path: /health/liveliness
-      port: http
+      port: http1
   ## If you don't want a livenessProbe, override like this in your values file
   # livenessProbe: ''
 
@@ -63,7 +63,7 @@ deploy:
   readinessProbe:
     httpGet:
       path: /health/readiness
-      port: http
+      port: http1
   ## If you don't want a readinessProbe, override like this in your values file
   # readinessProve: ''
 
