--- a/Application/templates/deployment.yaml
+++ b/Application/templates/deployment.yaml
@@ -60,16 +60,18 @@ spec:
             {{- tpl (toYaml .Values.deploy.volumeMounts) . | nindent 12 }}
 {{- end }}
 {{- if .Values.deploy.extraContainers }}
-      {{- $imageName := include "app.imageName" }}
-      {{ - range .Values.deploy.extraContainers }}
+{{- $imageName := printf "%s:%s" .Values.image.name .Values.image.tag -}}
+      {{- range .Values.deploy.extraContainers }}
         - name: {{ .name }}
-          image: $imageName
-          {{- if .env }}
+          image: '{{ $imageName }}'
+        {{- if .env }}
           env:
-          {{- tpl (toYaml .env) . | nindent 12 }}
+          {{- range .env }}
+          - name: {{ .name }}
+            value: {{ .value | quote }}
           {{- end }}
+        {{- end }}
       {{- end }}
-        # {{- tpl (toYaml .Values.deploy.extraContainers) . | nindent 8 }}
 {{- end }}
       volumes:
 {{- if .Values.deploy.applicationProperties.enabled }}
