--- a/Application/templates/deployment.yaml
+++ b/Application/templates/deployment.yaml
@@ -71,6 +71,13 @@ spec:
             value: {{ .value | quote }}
           {{- end }}
         {{- end }}
+        {{- if .volumeMounts }}
+          volumeMounts:
+          {{- range .volumeMounts }}
+          - name: {{ .name }}
+            mountPath: {{ .mountPath | quote }}
+          {{- end }}
+        {{- end }}
       {{- end }}
 {{- end }}
       volumes:
