--- a/Application/templates/deployment.yaml
+++ b/Application/templates/deployment.yaml
@@ -81,7 +81,7 @@ spec:
         {{- if .args }}
           args:
           {{- range .args }}
-          - {{ . }}
+          - {{ . | squote }}
           {{- end }}
         {{- end }}
       {{- end }}
