added working Dir

--- a/Application/templates/deployment.yaml
+++ b/Application/templates/deployment.yaml
@@ -83,6 +83,7 @@ spec:
           {{- end }}
         {{- end }}
         {{- if .args }}
+          workingDir: {{ .workingDir }}
           args:
           {{- range .args }}
           - {{ . | quote }}
