--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -125,6 +125,7 @@ deploy:
       requests:
         cpu: 250m
         memory: 128Mi
+     workingDir: /tmp
      args:
      - "node"
      - "app.js"
@@ -138,6 +139,7 @@ deploy:
         mountPath: /tmp/html/
    - name: my-extra-container-2
      image: quay.io/gotham/batman:797cd83
+     workingDir: /tmp
      args:
      - "node"
      - "app.js"
