--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -29,6 +29,10 @@ deploy:
       port: 8081
       targetPort: 8081
       protocol: TCP
+    - name: http3
+      port: 8082
+      targetPort: 8082
+      protocol: TCP
   ## For creating a Route, allowing your application to be accessed from outside the OCP cluster
   route:
     enabled: false
@@ -129,7 +133,7 @@ deploy:
      livenessProbe:
        httpGet:
          path: /health/liveliness
-         port: http1
+         port: http2
      args:
      - "node"
      - "app.js"
@@ -147,7 +151,7 @@ deploy:
      readinessProbe:
        httpGet:
          path: /health/readiness
-         port: http1
+         port: http3
      args:
      - "node"
      - "app.js"
