--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -16,6 +16,7 @@ deploy:
   #  requests:
   #    cpu: 50m
   #    memory: 128Mi
+  revisionHistoryLimit: 0
   strategy:
   ## type can Be RollingUpdate Or Recreate
     type: Recreate
