--- a/Application/templates/deployment.yaml
+++ b/Application/templates/deployment.yaml
@@ -114,4 +114,4 @@ spec:
     rollingUpdate:
       {{- tpl (toYaml .Values.deploy.strategy.rollingUpdate) . | nindent 6 }}
     {{- end }}
-  revisionHistoryLimit: {{ .Values.deploy.strategy.rollingUpdate.revisionHistoryLimit }}
+  revisionHistoryLimit: {{ .Values.deploy.revisionHistoryLimit }}
