--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -148,6 +148,8 @@ deploy:
      args:
      - sleep
      - "20"
+     - "echo"
+     - "i am done"
      env:
       - name: PORT
         value: "8081"
