--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -17,6 +17,7 @@ deploy:
   #    cpu: 50m
   #    memory: 128Mi
   revisionHistoryLimit: 0
+  restartPolicy: Always
   strategy:
   ## type can Be RollingUpdate Or Recreate
     type: Recreate
