--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -126,9 +126,9 @@ deploy:
 
   ## Freeform init containers: More information: https://kubernetes.io/docs/concepts/workloads/pods/init-containers/
   initContainers:
-  #  - name: my-init-container
-  #    command: ["echo", "hello"]
-  #    image: registry.redhat.io/ubi8/ubi-minimal
+   - name: my-init-container
+     command: ["echo", "Doing some updates"]
+     image: registry.redhat.io/ubi8/ubi-minimal
 
   ## Freeform containers: More information: https://kubernetes.io/docs/concepts/workloads/pods/#pod-templates
   extraContainers:
