--- a/Application/templates/deployment.yaml
+++ b/Application/templates/deployment.yaml
@@ -1,5 +1,4 @@
-{{- $isValueTrue := include "app.isTrue" .Values.someValue -}}
-{{- if $isValueTrue }}
+{{ if eq .Values.deploy.Pod false }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
