--- a/Application/templates/Pod.yaml
+++ b/Application/templates/Pod.yaml
@@ -1,5 +1,4 @@
-{{- $isValueTrue := include "app.isTrue" .Values.someValue -}}
-{{- if $isValueTrue }}
+{{ if eq .Values.deploy.Pod true }}
 apiVersion: v1
 kind: Pod
 metadata:
