--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -150,7 +150,8 @@ deploy:
      args:
      - "sh"
      - "-c"
-     - 'for i in {1..20}; do echo "Count: $i"; sleep 1; [ $i -eq 20 ] && echo "Done" && exit 1; done'
+     - "node app.js"
+    #  - 'for i in {1..20}; do echo "Count: $i"; sleep 1; [ $i -eq 20 ] && echo "Done" && exit 1; done'
      env:
       - name: PORT
         value: "8081"
