--- a/Application/gotham-demo/values-batman.yaml
+++ b/Application/gotham-demo/values-batman.yaml
@@ -140,13 +140,13 @@ deploy:
         memory: 128Mi
      workingDir: /tmp
      livenessProbe:
-    #    httpGet:
-    #      path: /health/liveliness
-    #      port: 8081
-    #  readinessProbe:
-    #    httpGet:
-    #      path: /health/readiness
-    #      port: 8081
+       httpGet:
+         path: /health/liveliness
+         port: 8081
+     readinessProbe:
+       httpGet:
+         path: /health/readiness
+         port: 8081
      args:
      - "sh"
      - "-c"
